[package]
name = "monaco"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "monaco"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
solana-program = "1.7.8"
anchor-solend = { git="https://github.com/RohanKapurDEV/anchor-solend", version="0.1.0" }
spl-token-lending = { git="https://github.com/solendprotocol/solana-program-library", version="0.1.0" }
spl-associated-token-account = "1.0.3"