[package]
name = "monaco"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "monaco"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
anchor-spl = "0.16.0"
solana-program = "1.7.11"
anchor-lending = { git="https://github.com/RohanKapurDEV/anchor-lending", version="0.2.1" }
spl-token-lending = { git="https://github.com/solendprotocol/solana-program-library", version="0.1.0" }
spl-associated-token-account = {version="1.0.3", features = ["no-entrypoint"]}